--- a/BlazorApp1/appsettings.json
+++ b/BlazorApp1/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "connectionStrings": {
+      "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Database=BlazorApp1;Trusted_Connection=True;"
+    }
+  
 }
